<resources>
    <string name="app_name">PracticalTest01Var08</string>
    <string name="action_settings">Settings</string>
    <string name="navi_string">Navigate to secondary activity</string>
    <string name="top_left">Top Left</string>
    <string name="top_right">Top Right</string>
    <string name="center_string">Center</string>
    <string name="bottom_left">Bottom Left</string>
    <string name="bottom_right">Bottom Right</string>
    <string name="title_activity_practical_test01_var08_secondary">
        PracticalTest01Var08SecondaryActivity
    </string>
    <string name="verify_string">Verify</string>
    <string name="cancel_string">Cancel</string>
</resources>
