<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ro.pub.cs.systems.eim.practicaltest01var08.PracticalTest01Var08MainActivity"
    tools:showIn="@layout/activity_practical_test01_var08_main"
    android:orientation="vertical">
    
    <Button
        android:id="@+id/navigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/navi_string"/>
    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3">

        <Button
            android:id="@+id/top_left_button"
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_left"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="0"/>
        <Button
            android:id="@+id/top_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_right"
            android:gravity="center"
            android:layout_row="0"
            android:layout_column="2"/>

        <Button
            android:id="@+id/center_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_string"
            android:gravity="center"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:id="@+id/bottom_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_left"
            android:gravity="center"
            android:layout_row="2"
            android:layout_column="0"/>
        <Button
            android:id="@+id/bottom_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_right"
            android:gravity="center"
            android:layout_row="2"
            android:layout_column="2"/>
    </GridLayout>

</LinearLayout>
